src/main/java/com/example/usedTrade/error/trade/TradeExceptionHandler.java
package com.example.usedTrade.error.trade;

import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice(basePackages = {"com.example.usedTrade.trade.controller"})
public class TradeExceptionHandler {


}
